--- a/pom.xml
+++ b/pom.xml
@@ -61,19 +61,22 @@
 			<version>0.1.54</version>
 		</dependency>
 		<dependency>
-			<groupId>apache-common-library</groupId>
+			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 			<version>1.2</version>
 		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.14</version>
-		</dependency>
+		<!-- <dependency> <groupId>commons-logging</groupId> <artifactId>commons-logging</artifactId> 
+			<version>1.1.1</version> <scope>system</scope> <systemPath>/Users/Dominic/Developer/osp/sguap-server/WEB-INF/repository/platform/thirdparty/org.apache.commons.logging_1.1.1.jar</systemPath> 
+			</dependency> -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.5.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.10</version>
 		</dependency>
 	</dependencies>
 
