--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sgcc.sgepri.QUtils</groupId>
 	<artifactId>qutils</artifactId>
@@ -55,7 +56,7 @@
 	</dependencyManagement>
 	<dependencies>
 		<dependency>
-			<groupId>apache-common-library</groupId>
+			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
 		</dependency>
@@ -115,12 +116,6 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator-annotation-processor</artifactId>
 			<version>5.2.1.Final</version>
-		</dependency>
-		<dependency>
-			<groupId>driver-library.jdbc</groupId>
-			<artifactId>Dm7JdbcDriver16</artifactId>
-			<version>0</version>
-			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-dbcp</groupId>
